UI: Simplify colors by using contrasting colors for textboxes and buttons
(integrated from master branch change 9.2.1-744-g789d64b by Nathan
Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -9,26 +9,11 @@
 @border: #303036;
 @selected: #326ECD;
 @selected-foreground: #FFF;
-@button-primary: #326ECD;
-@button: #326ECD;
+@button: #18181C;
 @button-foreground: #FFF;
 @icons: #FFF;
-@textbox: #202024;
+@textbox: #303038;
 @textbox-foreground: #FFF;
-
-/* Modal Window */
-@background-modal: #202024;
-@foreground-modal: #FFF;
-@contrast-modal: #28282E;
-
-/* Elements */
-@selected-modal: #326ECD;
-@selected-foreground-modal: #FFF;
-@button-primary-modal: #326ECD;
-@button-modal: #326ECD;
-@button-foreground-modal: #FFF;
-@textbox-modal: #28282E;
-@textbox-foreground-modal: #FFF;
 
 /* Special Windows */
 @special: #3F8AFF;
@@ -36,7 +21,6 @@
 @contrast-special: #326ECD;
 
 /* Special Elements */
-@button-primary-special: #326ECD;
 @button-special: #326ECD;
 @button-foreground-special: #FFF;
 @selected-special: #326ECD;
@@ -63,9 +47,3 @@
 @escaped-icons: %23FFF;
 @escaped-icons-special: %23FFF;
 
-/* Helpers for mixins - DONT TOUCH */
-@background-main: @background; @foreground-main: @foreground; @contrast-main: @contrast;
-@border-main: @border; @selected-main: @selected; @selected-foreground-main: @selected-foreground;
-@button-primary-main: @button-primary; @button-main: @button; @button-foreground-main: @button-foreground;
-@background-special: @special; @special-special: @contrast-special; @special-main: @special;
-@textbox-main: @textbox; @textbox-foreground-main: @textbox-foreground; @special-modal: @special;
