--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ca6xqd');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ca6xqd#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ca6xqd') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ca6xqd') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ca6xqd#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ebb8wb');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ebb8wb#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ebb8wb') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ebb8wb') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ebb8wb#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -929,6 +929,11 @@
 .icon-play-circle {
     &:before {
         content: @icon-play-circle;
+    }
+}
+.icon-external-link-square {
+    &:before {
+        content: @icon-external-link-square;
     }
 }
 .icon-trash {
