--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -179,6 +179,7 @@
 @icon-users: "\f0c0";
 @icon-circle-o: "\f10c";
 @icon-play-circle: "\f144";
+@icon-external-link-square: "\f14c";
 @icon-trash: "\f1f8";
 @icon-display3: "\f26c";
 @icon-stop-circle: "\f28d";
