HTTP Inspector: Updated UI to match new Komodo UI
(integrated from master branch change 9.2.1-747-ge720922 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -14,6 +14,7 @@
 @icons: #FFF;
 @textbox: #303038;
 @textbox-foreground: #FFF;
+@caption: #A0A0A8;
 
 /* Special Windows */
 @special: #3F8AFF;
@@ -42,6 +43,7 @@
 @state-warning: #F57C00;
 @state-info: #1976D2;
 @state-ok: #689F38;
+@state-foreground: #FFF;
 
 /* Escaped versions of above, cause LESS can't do this apparently */
 @escaped-icons: %23FFF;
