--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -70,3 +70,15 @@
 {
     color: @state-error;
 }
+
+/* State Colors */
+
+.state-error { color: @state-error; }
+.state-warning { color: @state-warning; }
+.state-info { color: @state-info; }
+.state-ok { color: @state-ok; }
+
+.box-state-error { color: @state-foreground; background-color: @state-error; }
+.box-state-warning { color: @state-foreground; background-color: @state-warning; }
+.box-state-info { color: @state-foreground; background-color: @state-info; }
+.box-state-ok { color: @state-foreground; background-color: @state-ok; }
