Notify: Created the notification widget mechanic
(integrated from master branch change 9.2.1-750-g4cbbbec by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -306,3 +306,31 @@ menu > .menu-right
     .icon();
     .icon-angle-right();
 }
+
+/* Notify */
+
+#notification-widget-textbox button 
+{
+    &.notification-icon
+    {
+        .icon();
+        .icon-exclamation-circle();
+    }
+    
+    &.menu > .box-inherit
+    {
+        .icon();
+        .icon-cog();
+    }
+    
+    &.undo
+    {
+        .icon();
+        .icon-undo2();
+    }
+    
+    dropmarker
+    {
+        display: none;
+    }
+}
