Commando: Don't show border on textbox
(integrated from master branch change 9.2.1-753-g22e70f3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -61,6 +61,11 @@
             color: @textbox-foreground-special;
         }
     }
+    
+    textbox, menulist
+    {
+        box-shadow: none !important;
+    }
 
     #commando-search
     {
