UI: Show titlebar on pref window
(integrated from master branch change 9.2.1-754-g4a71ec4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -55,8 +55,6 @@
 }
 
 :root[hidechrome="true"]:not([titlebar="false"]) #closebar,
-#prefWindow #closebar,
-#prefWindow #titlebar
 {
     visibility: collapse;
 }
@@ -71,7 +69,7 @@
  * have to put the background one node lower
  */
 #komodo_main > #komodo-box,
-:root:not([hidechrome="true"]):not(.pref-window)
+:root:not([hidechrome="true"])
 {
     &:not(#komodo_main)
     {
