Commando: Integrate with the notification widget
(integrated from master branch change 9.2.1-757-g57d34c7 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -6,6 +6,7 @@
 @import url("chrome://komodo/skin/global/chromeless.less");
 @import url("chrome://komodo/skin/global/prefs.less");
 @import url("chrome://komodo/skin/global/icons.less");
+@import url("chrome://komodo/skin/global/mixins.less");
 
 @import url("chrome://komodo/skin/global/scrollbars.less");
 
@@ -82,3 +83,4 @@
 .box-state-warning { color: @state-foreground; background-color: @state-warning; }
 .box-state-info { color: @state-foreground; background-color: @state-info; }
 .box-state-ok { color: @state-foreground; background-color: @state-ok; }
+
