Notify: Use smaller font for widget notifications
(integrated from master branch change 9.2.1-762-gb95bddc by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -77,6 +77,11 @@
         font-size: 1.2rem;
         text-align: center;
         color: @textbox-foreground-special;
+        
+        &.small
+        {
+            font-size: 0.9rem;
+        }
     }
     
     button
