UI: New toolbar customization tool WIP
(integrated from master branch change 9.2.1-763-gcd60792 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -48,4 +48,5 @@
 /* Escaped versions of above, cause LESS can't do this apparently */
 @escaped-icons: %23FFF;
 @escaped-icons-special: %23FFF;
+@escaped-special: %233F8AFF;
 
