--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -14,6 +14,7 @@
 @import url("chrome://komodo/skin/global/components/buttons.less");
 @import url("chrome://komodo/skin/global/components/scrolltabs.less");
 @import url("chrome://komodo/skin/global/components/scc.less");
+@import url("chrome://komodo/skin/global/components/customize.less");
 
 /* Don't show new tab button on anything but the buffer tabs */
 :not(#tabbed-view) > tabs toolbarbutton[anonid="tabs-new"]
