--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ebb8wb');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ebb8wb#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ebb8wb') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ebb8wb') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ebb8wb#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?cfbisc');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?cfbisc#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?cfbisc') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?cfbisc') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?cfbisc#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -909,6 +909,11 @@
 .icon-arrow-circle-right {
     &:before {
         content: @icon-arrow-circle-right;
+    }
+}
+.icon-arrows-alt {
+    &:before {
+        content: @icon-arrows-alt;
     }
 }
 .icon-group {
