--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -1,3 +1,5 @@
+@icomoon-font-path: "fonts";
+
 @icon-menu4: "\e902";
 @icon-down-tiny: "\e901";
 @icon-markdown: "\e900";
@@ -175,6 +177,7 @@
 @icon-minus-circle: "\f056";
 @icon-times-circle: "\f057";
 @icon-arrow-circle-right: "\f0a9";
+@icon-arrows-alt: "\f0b2";
 @icon-group: "\f0c0";
 @icon-users: "\f0c0";
 @icon-circle-o: "\f10c";
@@ -183,3 +186,4 @@
 @icon-trash: "\f1f8";
 @icon-display3: "\f26c";
 @icon-stop-circle: "\f28d";
+
