--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -15,7 +15,8 @@
         margin: 5px;
         padding: 0;
         
-        & > toolbarbutton
+        & > toolbarbutton,
+        .toolbaritem > toolbarbutton
         {
             width: 18px;
             margin: 0;
