--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -145,7 +145,8 @@ toolbarbutton {
   -moz-box-pack: center;
 }
 
-toolbaritem > toolbarbutton
+toolbaritem > toolbarbutton,
+.toolbaritem > toolbarbutton
 {
     margin: 4px 6px;
 }
