--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -88,6 +88,7 @@
 .komodo-button-bugs { .icon(); .icon-bug(); }
 .native-print-icon { .icon-printer3(); }
 .help-icon { .icon-question4(); }
+.overflow-toolbarbutton > .toolbarbutton-text { .icon(); .icon-arrow-down3(); }
 
 .regex-shortcuts-button > .toolbarbutton-text { .icon(); .icon-external-link-square(); }
 .regex-shortcuts-button > .toolbarbutton-icon { display: none; }
